fix: add gap between fields

--- a/app/globals.css
+++ b/app/globals.css
@@ -31,26 +31,25 @@ main {
 }
 
 .cocomo-form {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1.5rem;
-    padding: 1.5rem;
     width: 100%;
     background-color: white;
     border-radius: 12px;
+    padding: 1.5rem;
 
     @container (width < 800px) {
         flex-direction: column;
     }
 
-    & :is(.cocomo-form__fields, .cocomo-form__results) {
+    :is(&, .cocomo-form__fields, .cocomo-form__results) {
         display: flex;
-        flex-direction: column;
-        gap: 1.5rem;
-        padding: 1.5rem;
         align-items: center;
         justify-content: center;
+        gap: 1.5rem;
+    }
+
+    .cocomo-form__fields,
+    .cocomo-form__results {
+        flex-direction: column;
     }
 
     .cocomo-form__split {
